--- a/MinimalPhone/app/src/main/res/values/themes.xml
+++ b/MinimalPhone/app/src/main/res/values/themes.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MinimalPhone" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MinimalPhone" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+
+    <style name="Theme.PermissionsTest" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- You can define your color overrides here -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+    </style>
+
 </resources>
