Implimented Accessibility into MainActivity

--- a/MinimalPhone/app/src/main/res/layout/activity_main.xml
+++ b/MinimalPhone/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,11 @@
         android:layout_height="wrap_content"
         android:text="Start Foreground Service" />
 
+    <Button
+        android:id="@+id/enableAccessibilityButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enable Accessibility Detection"
+        android:layout_marginTop="16dp" />
+
 </LinearLayout>
