Added status text to activity_main.xml

--- a/MinimalPhone/app/src/main/res/layout/activity_main.xml
+++ b/MinimalPhone/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,13 @@
         android:text="Enable Accessibility Detection"
         android:layout_marginTop="16dp" />
 
+    <TextView
+        android:id="@+id/statusText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Accessibility Status"
+        android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
