--- a/MinimalPhone/app/src/main/res/layout/activity_onboarding.xml
+++ b/MinimalPhone/app/src/main/res/layout/activity_onboarding.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
-    tools:context=".OnboardingActivity">
+    tools:context=".OnboardingActivity"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center">
 
         <!-- Title -->
         <TextView
