--- a/MinimalPhone/app/src/main/res/values/colors.xml
+++ b/MinimalPhone/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="dark_grey">#1B1B1B</color>
+    <color name="dark_gray">#1B1B1B</color>
 
 </resources>
